third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-src-not-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-src-not-intobytes.rs:19:32
   |
19 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-msrv/transmute-src-not-intobytes.rs:19:32
   |
19 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                required by a bound in this
   |                                required by this bound in `SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
